# pubsub-event-example-pdf-merger

./: .env  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
cdc_pdf_pipeline/: api.py  broker.py  log.py
cdc_pdf_pipeline/db/: models.py  ops.py
cdc_pdf_pipeline/messaging/: publisher.py  subscriber.py  tasks.py
cdc_pdf_pipeline/storage/: gcs.py  pdf.py
event_driven_pdf_pipeline/: api.py  broker.py  config.py  log.py
event_driven_pdf_pipeline/db/: ops.py
event_driven_pdf_pipeline/messaging/: publisher.py  schemas.py  subscriber.py  tasks.py
event_driven_pdf_pipeline/storage/: gcs.py  pdf.py
scripts/: init_services.py  load_pdfs.py
src/cdc_pdf_pipeline/: api.py  config.py  db.py  gcs.py  pdf.py  publisher.py  subscriber.py  tasks.py
