[project]
name = "cdc-pdf-pipeline"
version = "0.1.0"
description = "CDC event-driven PDF pipeline demo"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "taskiq>=0.11",
    "taskiq-redis>=0.5",
    "google-cloud-pubsub>=2.26",
    "google-cloud-storage>=2.19",
    "pypdf>=5.0",
    "pydantic-settings>=2.7",
    "typer>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdc_pdf_pipeline"]
